# flatbread-xl

./: pyproject.toml  readme.md
src/flatbreadxl/: borders.py  layout.py  pattern.py  spans.py  worksheet.py
src/flatbreadxl/elements/: base.py  table.py  text.py
src/flatbreadxl/table/: __init__.py  grouped.py  writer.py
src/pandasxl/: __init__.py  borders.py  docsheet.py  excel_exporter.py  layout.py  merge.py  pattern.py  sheets.py  spans.py  style.py  worksheet.py
src/pandasxl/elements/: base.py  table.py  text.py
src/pandasxl/table/: __init__.py  grouped.py  writer.py
